--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+li {
+  list-style: none;
+}
+
+ul, li, h1, h2, h3, h4, p, label {
+  margin: 0;
+  padding: 0;
+}
